@@ -73,6 +73,10 @@ Here is a history of user visible changes to Mailman.
 
   Bug Fixes and other patches
 
+    - Fixed an erroneous seek in the Mailman.Mailbox.Mailbox.AppendMessage
+      method that could cause a corrupt mailbox for files opened 'w+'.
+      Bug #901957.
+
     - A held message with a null sender caused a crash in the admindb
       interface.  This is fixed by changing the sender to <missing>.
       Bug #897103.
